<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_text"
        android:text="@string/app_name"
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name_text"
            android:hint="@string/message_name_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/go_button"
            android:text="@string/label_go_button_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
 
 	<Button
        android:id="@+id/m1_button"
        android:text="@string/label_m1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
 
    <Button
        android:id="@+id/m2_button"
        android:text="@string/label_m2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>